insertShouldReturnTaskDTO